Fixes distorting canvas when resizing window

--- a/index.css
+++ b/index.css
@@ -3,6 +3,5 @@ body {
 }
 
 canvas {
-  width: 100vw;
-  height: 100vh;
+
 }
